2010-12-21  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Module.hpp: adding module structure and module table 
	* include/dlvhex/ModuleTable.hpp: Likewise.
	* include/dlvhex/Predicate.hpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

2010-12-20  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/TermTable.hpp: separated term table and pred table 
	* include/dlvhex/HexGrammarPTToASTConverter.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/TestHexParserModule.cpp: Likewise.
	* src/dlvhex/ModuleSyntaxChecker.cpp: Likewise.
	* src/dlvhex/ID.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

	* include/dlvhex/ID.hpp: adding idb list, edb list, and predicate list 
	* include/dlvhex/ProgramCtx.h: Likewise.

	* include/dlvhex/ID.hpp: Separating predicate from term table 
	* include/dlvhex/Predicate.hpp: Likewise.
	* include/dlvhex/PredicateTable.hpp: Likewise.

2010-12-16  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/HexGrammarPTToASTConverter.cpp: change the way predicate namespaced
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.

2010-12-14  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: adding method verifySyntax that take care all of the process of module syntax check
	* src/dlvhex/ModuleSyntaxChecker.cpp: adding method verifySyntax that take care all of the process of module syntax check 
	* testsuite/TestHexParserModule.cpp: Adding testcases and supported example files 
	* examples/module1.hex: Likewise.
	* examples/module2.hex: Likewise.
	* examples/module3.hex: Likewise.
	* examples/module1-DiffArity.hex: Likewise.
	* examples/module1-NotExist.hex: Likewise.
	* examples/module2-DiffArity.hex: Likewise.
 	* examples/module2-TooFew.hex: Likewise.
 	* examples/module2-TooMany.hex: Likewise.
	* examples/module3-DiffArity.hex: Likewise.